# romea-ros2-path-following

./: CMakeLists.txt  package.xml
config/joystick/: hj60ss.yaml  keyboard.yaml
include/romea_path_following/: path_following.hpp  path_following_component.hpp  path_following_factory.hpp  path_following_lateral_control.hpp  path_following_longitudinal_control.hpp  path_following_parameters.hpp  path_following_sliding_observer.hpp  path_following_traits.hpp  path_platoon.hpp  path_platoon_component.hpp  path_platoon_parameters.hpp
include/romea_path_following/external_control/platoon/: component.hpp  parameters.hpp  platoon.hpp
include/romea_path_following/lateral_control/: back_stepping.hpp  base.hpp  classic.hpp  front_rear_decoupled.hpp  predictive.hpp  skid_backstepping.hpp  skid_sliding.hpp
include/romea_path_following/longitudinal_control/: classic.hpp
include/romea_path_following/path_following/: component.hpp  factory.hpp  parameters.hpp  path_following.hpp  traits.hpp
include/romea_path_following/sliding_observer/: picard_skid_backstepping.hpp  skid_backstepping.hpp
include/romea_path_following/sliding_observer/extended/: cinematic_linear_tangent.hpp  cinematic_lyapunov.hpp
include/romea_path_following/sliding_observer/skid/: picard_backstepping.hpp  picard_lyapunov.hpp
include/romea_path_following2/: path_following_longitudinal_control.hpp
launch/: path_following.launch.py  path_recorder.launch.py  platoon.launch.py  platoon_plugin.launch.py
romea_path_following/: CMakeLists.txt  package.xml
romea_path_following/config/: path_following.yaml
romea_path_following/config/joystick/: dualshock4.yaml  xbox.yaml
romea_path_following/include/romea_path_following2/: path_following.hpp  path_following_component.hpp  path_following_factory.hpp  path_following_lateral_control.hpp  path_following_parameters.hpp  path_following_sliding_observer.hpp  path_following_traits.hpp
romea_path_following/src/: path_following.cpp  path_following_component.cpp
romea_path_following/test/: CMakeLists.txt  test_lateral_control.cpp
scripts/: uturn_manager
src/: path_following.cpp  path_following_component.cpp  path_following_node.cpp  path_platoon.cpp  path_platoon_component.cpp
src/external_control/platoon/: component.cpp  platoon.cpp
src/path_following/: component.cpp  path_following.cpp
test/: CMakeLists.txt  test_lateral_control.cpp  test_lateral_control.yaml  test_lateral_control_back_stepping.cpp  test_lateral_control_classic.cpp  test_lateral_control_predictive.cpp  test_path_following_factory.cpp  test_path_following_factory.yaml  test_sliding_observer.cpp  test_sliding_observer.yaml  test_sliding_observer_extended_cinematic_linear_tangent.cpp  test_sliding_observer_extended_cinematic_lyapunov.cpp
