find_package(ament_cmake_gtest REQUIRED)

get_filename_component(TEST_DIR_SRC ${CMAKE_CURRENT_SOURCE_DIR} ABSOLUTE)
configure_file(test_helper.h.in test_helper.h)
include_directories(${CMAKE_CURRENT_BINARY_DIR})

ament_add_gtest(${PROJECT_NAME}_test_path_following_factory test_path_following_factory.cpp)
target_link_libraries(${PROJECT_NAME}_test_path_following_factory ${PROJECT_NAME})

ament_add_gtest(${PROJECT_NAME}_test_lateral_control_back_stepping test_lateral_control_back_stepping.cpp)
target_link_libraries(${PROJECT_NAME}_test_lateral_control_back_stepping ${PROJECT_NAME})

ament_add_gtest(${PROJECT_NAME}_test_lateral_control_classic test_lateral_control_classic.cpp)
target_link_libraries(${PROJECT_NAME}_test_lateral_control_classic ${PROJECT_NAME})

ament_add_gtest(${PROJECT_NAME}_test_lateral_control_predictive test_lateral_control_predictive.cpp)
target_link_libraries(${PROJECT_NAME}_test_lateral_control_predictive ${PROJECT_NAME})

ament_add_gtest(${PROJECT_NAME}_test_sliding_observer_extended_cinematic_linear_tangent test_sliding_observer_extended_cinematic_linear_tangent.cpp)
target_link_libraries(${PROJECT_NAME}_test_sliding_observer_extended_cinematic_linear_tangent ${PROJECT_NAME})

ament_add_gtest(${PROJECT_NAME}_test_sliding_observer_extended_cinematic_lyapunov test_sliding_observer_extended_cinematic_lyapunov.cpp)
target_link_libraries(${PROJECT_NAME}_test_sliding_observer_extended_cinematic_lyapunov ${PROJECT_NAME})
